Update of sidebar, index page and docs and snippet list with AMPScript materials

--- a/docs/docs-and-snippets.mdx
+++ b/docs/docs-and-snippets.mdx
@@ -29,6 +29,7 @@ SSJS is an XX-century-version of JavaScript paired with proprietary libraries cr
 
 ### SSJS Use Cases
 
+- [Solve with Cloud Apps](./usecase/sfmc-cloud-apps.mdx)
 - [Engage with Countdown](./usecase/engage-with-countdown.mdx)
 - [Tailor with Data](./usecase/tailor-with-data.mdx)
 
