First draft of SSJS Style Guide

--- a/docs/docs-and-snippets.mdx
+++ b/docs/docs-and-snippets.mdx
@@ -26,6 +26,7 @@ SSJS is an XX-century-version of JavaScript paired with proprietary libraries cr
 - [Loops](./ssjs/ssjs-loops.mdx)
 - [Debugging](./ssjs/debugging-ssjs.mdx)
 - [Performance](./ssjs/ssjs-vs-ampscript-performance.mdx)
+- [Style Guide](./ssjs/ssjs-style-guide.mdx)
 
 ### SSJS Use Cases
 
